--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,9 +16,8 @@
         android:theme="@style/Theme.RouteTask"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ProductsActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.RouteTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
