--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.RouteTask"
         tools:targetApi="31">
         <activity
-            android:name=".ProductsActivity"
+            android:name=".activities.HomeActivity"
             android:exported="true"
             android:theme="@style/Theme.RouteTask">
             <intent-filter>
